methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:46: error: Unmatched closing brace '}' ignored here
}
^